--- a/styles2.css
+++ b/styles2.css
@@ -18,7 +18,8 @@
 }
 
 #time {
-  font-size: 21.428571429em;
+  /*font-size: 21.428571429em;*/
+  font-size: 25em;
   font-weight: 900;
 }
 
@@ -33,6 +34,10 @@ small.text-muted {
 .panel-body {
   font-size: 4.2857142857em;
   font-weight: 400;
+}
+.col-md-2>.panel>.panel-body{
+  color: #fff;
+  background-color: #3c763d;
 }
 
 .well-lg {
