--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
   border-color: #3c763d;
 }
 .panel-success>.panel-heading {
-  color:#ebff00;
-  background-color:#3c763d;
+  color:#ffff00;
+  /*background-color:#3c763d;*/
+  background-color: #000000;
   border-color: #3c763d;
 }
 
