--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,10 @@ small.text-muted {
   font-weight: 600;
 }
 .panel-body {
-  font-size: 4.2857142857em;
-  font-weight: 400;
+  font-size: 7.5em;
+  font-weight: 900;
+  /*font-size: 4.2857142857em;
+  font-weight: 400;*/
 }
 .col-md-2>.panel>.panel-body{
   color: #ffff00;
