--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+.navbar-text {
+  padding-left: 150px;
+}
 .col-md-2 {
   width:20%;
 }
 .navbar-text {
-  font-size:2.4285714286em;
+  font-size: 6em;
+  /*font-size:2.4285714286em;*/
 }
 .panel-success {
   border-color: #3c763d;
@@ -14,6 +18,7 @@
 }
 
 .navbar-right {
+  padding-right: 50px;
   margin-right: 0px;
 }
 
