--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,33 @@
+body {
+  line-height: 1.1428571429;
+}
+
 .img-responsive {
   margin-bottom: 10px;
 }
+
+.col-md-4 {
+  line-height: 1.42857143;
+}
+
 .col-md-2 {
   width:20%;
   padding-right:5px;
   padding-left:5px;
 }
+
+.col-md-2:only-child {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+div.col-md-12 {
+  border: 0px;
+}
+
 .navbar-text {
   font-size: 4em;
+  margin-left: 0px;
   /*font-size:2.4285714286em;*/
 }
 .panel-success {
