--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   padding-left:5px;
 }
 
-.col-md-2:nth-child(2) {
+.col-md-2:only-of-type {
   padding-right: 15px;
   padding-left: 15px;
 }
