--- a/styles.css
+++ b/styles.css
@@ -13,18 +13,18 @@ body {
 
 .col-md-2 {
   width:20%;
-  padding-right:5px;
-  padding-left:5px;
+  /*padding-right:5px;
+  padding-left:5px;*/
 }
-
+/*
 .col-md-4 + .col-md-2 {
   padding-right: 15px;
   padding-left: 15px;
-}
+}*/
 
-div.col-md-12 {
+/*div.col-md-12 {
   border: 0px;
-}
+}*/
 
 .navbar-text {
   font-size: 4em;
