revert for test3

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ body {
   padding-left: 15px;
 }*/
 
-/*div.col-md-12 {
+div.col-md-12 {
   border: 0px;
-}*/
+}
 
 .navbar-text {
   font-size: 4em;
