--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,11 @@ body {
   /*padding-right:5px;
   padding-left:5px;*/
 }
-/*
+
 .col-md-4 + .col-md-2 {
   padding-right: 15px;
   padding-left: 15px;
-}*/
+}
 
 div.col-md-12 {
   border: 0px;
